--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "mongoose": "^6.7.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.1",
+    "mongoose-unique-validator": "^3.1.0"
   }
 }
